# even_os

./: .replit  Pasted-To-add-a-button-to-stop-the-RSVP-process-follow-these-steps-Add-a-stop-button-to-the-interface-an-1731017242482.txt  Pasted-To-create-another-text-box-that-sends-a-request-to-OpenAI-s-chat-completion-API-instead-of-just-send-1731024312352.txt  clone_repo.py  prototype.py  pyproject.toml  replit.nix
even_glasses/: .gitignore  examples.py  main.py
even_glasses/even_glasses/: __init__.py  bluetooth_manager.py  models.py  notification_handlers.py  rsvp_story.txt  service_identifiers.py  utils.py
even_os/: replit.nix  test_glasses.py
even_os/even_glasses/: README.md  main.py  requirements.txt  setup.py
even_os/even_glasses/even_glasses/: README.md  commands.py  notification_handlers.py
